# ResGen

./: .gitignore  Agent.py  main.py  pyproject.toml  requirements.txt  test.py
LateX/: template.tex
classes/: Auth.py  Control.py  SingleTon.py  Test.java  agentContext.py  perception.py
classes/HR/: perception.py  replies.json
classes/HR/log/: log.txt  log1.json  log2.json
classes/HR/prompts/: finalprompt.md  loop2_prompt.md  loop_promt.md  missed_prompt.txt  objective_prompt.txt  questions.md
classes/HR/prompts/discarded/: extractor_prompt.txt  testextractor_prompt.txt
client/project/: index.html  package-lock.json  package.json
client/project/server/: User.js  authCheck.js  index.js
client/project/src/: App.tsx
client/project/src/components/: AuthLayout.tsx  Button.tsx  InputField.tsx
client/project/src/pages/: AppendSchema.tsx  CreateSchema.tsx  Dashboard.tsx  LoginPage.tsx  SignupPage.tsx
client/project/src/types/: auth.ts
client/project/src/utils/: api.ts  validation.ts
docs/: urls.txt
faiss/: cache.json  meta_data.json
prompts/: ResumePrompt.txt
test/: latexTest.txt  model.py  template.txt  test.ipynb
